<resources>
    <string name="app_name">Share Blood</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Sign Out</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="gps_network_not_enabled">gps_network_not_enabled</string>
    <string name="open_location_settings">open_location_settings</string>
    <string name="Cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="blood_group_array">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="my_profile">My Profile</string>
    <string name="feedback">Feedback</string>
    <string name="create_events">Create Events</string>
    <string name="organizer">Organizer</string>
    <string name="about">About</string>
</resources>
